--- a/test.html
+++ b/test.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>List</title>
-<script type="text/javascript" src="drag.js"></script>
+<script type="text/javascript" src="xdrag.js"></script>
 <style type="text/css">
 body {
    font-family: Arial;
