Added placeholders support

--- a/test.html
+++ b/test.html
@@ -25,6 +25,10 @@ body {
    padding: 3px 6px;
    background: #fff;
 }
+#list .placeholder {
+   box-sizing: border-box;
+   background: #ccc;
+}
 </style>
 <script type="text/javascript">
    
@@ -40,6 +44,6 @@ body {
 </script>
 </head>
 <body onload="init()">
-<div id="list" class="reorder"><div>A</div><div>B</div><div>C</div><div>D</div></div>
+<div id="list" class="reorder use-placeholder"><div>A</div><div>B</div><div>C</div><div>D</div></div>
 </body>
 </html>
